LoadStoreMachine/LoadStoreMachine/logs/hls_run_csim_22600.backup.log
  **** HLS Build v2025.1 6135595
INFO: [HLS 200-2005] Using work_dir C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=./loadstore.cpp' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/loadstore.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=./loadstore.h' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/loadstore.h' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=./test_lsm.cpp' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/test_lsm.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=execute' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z007sclg225-2' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z007s-clg225-2'
INFO: [HLS 200-1465] Applying config ini 'clock=10ns' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying config ini 'clock_uncertainty=27%' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2.7ns.
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../test_lsm.cpp in debug mode
csim.mk:88: recipe for target 'obj/test_lsm.o' failed
In file included from ../../../../test_lsm.cpp:1:
In file included from ../../../../loadstore.h:4:
In file included from C:/Xilinx/2025.1/Vitis/include/ap_int.h:10:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_common.h:677:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_private.h:68:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_half.h:26:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_fpo.h:140:
In file included from C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/2025.1/Vitis/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../test_lsm.cpp:23:46: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_ADD, 1, 2, 3, 0, alu_out, mem_out);
    ~~~~~~~~~~~                              ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:31:46: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_SUB, 2, 1, 4, 0, alu_out, mem_out);
    ~~~~~~~~~~~                              ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:40:46: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_AND, 1, 6, 5, 0, alu_out, mem_out);
    ~~~~~~~~~~~                              ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:48:45: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_OR, 1, 8, 7, 0, alu_out, mem_out);
    ~~~~~~~~~~~                             ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:57:47: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_ST, 10, 11, 0, 0, alu_out, mem_out);
    ~~~~~~~~~~~                               ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:65:47: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_LD, 0, 11, 12, 0, alu_out, mem_out);
    ~~~~~~~~~~~                               ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:77:49: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_ADD, 14, 15, 13, 0, alu_out, mem_out);
    ~~~~~~~~~~~                                 ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:81:49: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_ADD, 13, 13, 16, 0, alu_out, mem_out);
    ~~~~~~~~~~~                                 ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:86:47: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_ST, 16, 17, 0, 0, alu_out, mem_out);
    ~~~~~~~~~~~                               ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
../../../../test_lsm.cpp:89:47: error: too many arguments to function call, expected 6, have 7
    lsm.execute(OP_LD, 0, 17, 18, 0, alu_out, mem_out);
    ~~~~~~~~~~~                               ^~~~~~~
../../../../loadstore.h:85:10: note: 'execute' declared here
    void execute(
         ^
1 warning and 10 errors generated.
make: *** [obj/test_lsm.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 4 seconds. Total CPU system time: 13 seconds. Total elapsed time: 60.34 seconds; peak allocated memory: 136.191 MB.
